// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accordion examples > Accordion group with arrow key navigation should render correctly 1`] = `
<div>
  <div
    class="v-accordion"
    id="accordion-key-nav-group"
  >
    <button
      aria-controls="accordion-key-nav-group-panel-0"
      aria-expanded="false"
      class="v-button v-button-large v-button-secondary v-accordion-heading"
      id="accordion-key-nav-group-header-0"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      Accordion title 1
    </button>
    <div
      aria-hidden="true"
      class="v-accordion-panel"
      id="accordion-key-nav-group-panel-0"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
    <button
      aria-controls="accordion-key-nav-group-panel-1"
      aria-expanded="false"
      class="v-button v-button-large v-button-secondary v-accordion-heading"
      id="accordion-key-nav-group-header-1"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      Accordion title 2
    </button>
    <div
      aria-hidden="true"
      class="v-accordion-panel"
      id="accordion-key-nav-group-panel-1"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
    <button
      aria-controls="accordion-key-nav-group-panel-2"
      aria-expanded="false"
      class="v-button v-button-large v-button-secondary v-accordion-heading"
      id="accordion-key-nav-group-header-2"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      Accordion title 3
    </button>
    <div
      aria-hidden="true"
      class="v-accordion-panel"
      id="accordion-key-nav-group-panel-2"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Accordion examples > Accordion with badge should render correctly 1`] = `
<div>
  <details
    class="v-accordion"
  >
    <summary
      class="v-button v-button-large v-button-secondary v-accordion-heading v-align-items-center"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        style="align-self: center;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
        focusable="false"
        height="16"
        style="align-self: center;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
        />
      </svg>
      Accordion title
      <div
        class="v-badge v-badge-stable v-ml-auto"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-success"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M8 0C9.30716 0 10.5403 0.315171 11.6299 0.871094L10.1162 2.38477C9.45802 2.13659 8.74502 2 8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 7.78891 13.9881 7.58047 13.9668 7.375L15.6768 5.75C15.8857 6.46393 16 7.21854 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0Z"
          />
          <path
            class="v-icon-primary"
            d="M15 3.46582L7.72852 10.9961L5 8.18262L6.42578 6.71289L7.72852 8.05664L13.5742 1.99609L15 3.46582Z"
          />
        </svg>
        Label
      </div>
    </summary>
    <div
      class="v-accordion-panel"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
  </details>
</div>
`;

exports[`Accordion examples > Accordion with icon should render correctly 1`] = `
<div>
  <details
    class="v-accordion"
  >
    <summary
      class="v-button v-button-large v-button-secondary v-accordion-heading"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-low v-icon-cloud"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M14 9.00098C15.65 9.00098 17 10.351 17 12.001H15C15 11.451 14.55 11.001 14 11.001V9.00098Z"
        />
        <path
          class="v-icon-primary"
          d="M14 4.00098C17.66 4.00098 20.6697 6.82137 20.9697 10.4014C22.7897 11.1814 24 12.981 24 15.001C24 17.761 21.76 20.001 19 20.001H5C2.24 20.001 0 17.761 0 15.001C0 12.751 1.49995 10.8212 3.58984 10.2012C3.97984 8.36117 5.58 7.00098 7.5 7.00098C7.73996 7.00098 7.97999 7.02056 8.20996 7.06055C9.50998 5.16071 11.6601 4.00098 14 4.00098ZM14 6.00098C12.13 6.00098 10.4296 7.03117 9.55957 8.70117L9.12988 9.52051L8.28027 9.16113C8.04027 9.05113 7.77 9.00098 7.5 9.00098C6.4 9.00098 5.5 9.90098 5.5 11.001V11.8809L4.62012 12.0205C3.13012 12.2105 2 13.491 2 15.001C2 16.651 3.35 18.001 5 18.001H19C20.65 18.001 22 16.651 22 15.001C22 13.631 21.08 12.4308 19.75 12.0908L18.9805 11.8906L19 11.001C19 8.24098 16.76 6.00098 14 6.00098Z"
        />
      </svg>
      Accordion title
    </summary>
    <div
      class="v-accordion-panel"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
  </details>
</div>
`;

exports[`Accordion examples > Custom multi-select accordion group with accordion expanded by default should render correctly 1`] = `
<div>
  <div
    class="v-accordion"
    id="accordion-disclosure-group"
  >
    <button
      aria-controls="accordion-disclosure-group-panel-0"
      aria-expanded="true"
      class="v-button v-button-large v-button-secondary v-accordion-heading"
      id="accordion-disclosure-group-header-0"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
        />
      </svg>
      Accordion title 1
    </button>
    <div
      aria-hidden="false"
      class="v-accordion-panel"
      id="accordion-disclosure-group-panel-0"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
    <button
      aria-controls="accordion-disclosure-group-panel-1"
      aria-expanded="true"
      class="v-button v-button-large v-button-secondary v-accordion-heading"
      id="accordion-disclosure-group-header-1"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
        />
      </svg>
      Accordion title 2
    </button>
    <div
      aria-hidden="false"
      class="v-accordion-panel"
      id="accordion-disclosure-group-panel-1"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
    <button
      aria-controls="accordion-disclosure-group-panel-2"
      aria-expanded="false"
      class="v-button v-button-large v-button-secondary v-accordion-heading"
      id="accordion-disclosure-group-header-2"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      Accordion title 3
    </button>
    <div
      aria-hidden="true"
      class="v-accordion-panel"
      id="accordion-disclosure-group-panel-2"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Accordion examples > Custom single-select accordion group with accordion expanded by default should render correctly 1`] = `
<div>
  <div
    class="v-accordion"
    id="accordion-default-open-group"
  >
    <button
      aria-controls="accordion-default-open-panel-0"
      aria-expanded="true"
      class="v-button v-button-large v-button-secondary v-accordion-heading"
      id="accordion-default-open-header-0"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
        />
      </svg>
      Accordion title 1
    </button>
    <div
      aria-hidden="false"
      class="v-accordion-panel"
      id="accordion-default-open-panel-0"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
    <button
      aria-controls="accordion-default-open-panel-1"
      aria-expanded="false"
      class="v-button v-button-large v-button-secondary v-accordion-heading"
      id="accordion-default-open-header-1"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      Accordion title 2
    </button>
    <div
      aria-hidden="true"
      class="v-accordion-panel"
      id="accordion-default-open-panel-1"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
    <button
      aria-controls="accordion-default-open-panel-2"
      aria-expanded="false"
      class="v-button v-button-large v-button-secondary v-accordion-heading"
      id="accordion-default-open-header-2"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      Accordion title 3
    </button>
    <div
      aria-hidden="true"
      class="v-accordion-panel"
      id="accordion-default-open-panel-2"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Accordion examples > Default accordion should render correctly 1`] = `
<div>
  <details
    class="v-accordion"
  >
    <summary
      class="v-button v-button-large v-button-secondary v-accordion-heading"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
        />
      </svg>
      Accordion title
    </summary>
    <div
      class="v-accordion-panel"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
  </details>
</div>
`;

exports[`Accordion examples > Default multi-select accordion group should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
  >
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 1
      </summary>
      <div
        class="v-accordion-panel"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </details>
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 2
      </summary>
      <div
        class="v-accordion-panel"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </details>
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 3
      </summary>
      <div
        class="v-accordion-panel"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples > Default single-select accordion group should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
  >
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 1
      </summary>
      <div
        class="v-accordion-panel"
      >
        <span>
          This is required text that describes the accordion section in more detail.
        </span>
      </div>
    </details>
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 2
      </summary>
      <div
        class="v-accordion-panel"
      >
        <span>
          This is required text that describes the accordion section in more detail.
        </span>
      </div>
    </details>
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 3
      </summary>
      <div
        class="v-accordion-panel"
      >
        <span>
          This is required text that describes the accordion section in more detail.
        </span>
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples > Disabled accordion should render correctly 1`] = `
<div>
  <div
    class="v-accordion"
    id="collapsed-disabled-accordion"
  >
    <button
      aria-controls="collapsed-disabled-accordion-accordion-panel"
      aria-expanded="false"
      class="v-button v-button-large v-button-secondary v-accordion-heading"
      disabled=""
      id="collapsed-disabled-accordion-accordion-header"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      Accordion title
    </button>
    <div
      aria-hidden="true"
      class="v-accordion-panel"
      id="collapsed-disabled-accordion-accordion-panel"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Accordion examples > Disabled subtle accordion should render correctly 1`] = `
<div>
  <div
    class="v-accordion"
  >
    <button
      aria-controls="disabled-subtle-accordion-accordion-panel"
      aria-expanded="false"
      class="v-button v-button-large v-button-tertiary v-accordion-heading v-gap-2"
      disabled=""
      id="disabled-subtle-accordion-accordion-header"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      <p
        class="v-typography-body-2-medium"
      >
        Accordion title
      </p>
    </button>
    <div
      aria-hidden="true"
      class="v-accordion-panel v-px-32"
      id="disabled-subtle-accordion-accordion-panel"
      style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px;"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Accordion examples > Multi-select accordion group with accordion expanded by default should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
  >
    <details
      class="v-accordion"
      open=""
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 1
      </summary>
      <div
        class="v-accordion-panel"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </details>
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 2
      </summary>
      <div
        class="v-accordion-panel"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </details>
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 3
      </summary>
      <div
        class="v-accordion-panel"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples > Multi-select accordion group with disabled accordion should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
  >
    <div
      class="v-accordion"
      id="multi-select-accordion-group-with-disabled-panel-1"
    >
      <button
        aria-controls="multi-select-accordion-group-with-disabled-panel-1-accordion-panel"
        aria-expanded="false"
        class="v-button v-button-large v-button-secondary v-accordion-heading"
        disabled=""
        id="multi-select-accordion-group-with-disabled-panel-1-accordion-header"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        Accordion title 1
      </button>
      <div
        aria-hidden="true"
        class="v-accordion-panel"
        id="multi-select-accordion-group-with-disabled-panel-1-accordion-panel"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </div>
    <div
      class="v-accordion"
      id="multi-select-accordion-group-with-disabled-panel-2"
    >
      <button
        aria-controls="multi-select-accordion-group-with-disabled-panel-2-accordion-panel"
        aria-expanded="false"
        class="v-button v-button-large v-button-secondary v-accordion-heading"
        id="multi-select-accordion-group-with-disabled-panel-2-accordion-header"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        Accordion title 2
      </button>
      <div
        aria-hidden="true"
        class="v-accordion-panel"
        id="multi-select-accordion-group-with-disabled-panel-2-accordion-panel"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </div>
    <div
      class="v-accordion"
      id="multi-select-accordion-group-with-disabled-panel-3"
    >
      <button
        aria-controls="multi-select-accordion-group-with-disabled-panel-3-accordion-panel"
        aria-expanded="false"
        class="v-button v-button-large v-button-secondary v-accordion-heading"
        id="multi-select-accordion-group-with-disabled-panel-3-accordion-header"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        Accordion title 3
      </button>
      <div
        aria-hidden="true"
        class="v-accordion-panel"
        id="multi-select-accordion-group-with-disabled-panel-3-accordion-panel"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion examples > Native single-select accordion group should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
  >
    <details
      class="v-accordion"
      name="native-single-select-accordion-group"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 1
      </summary>
      <div
        class="v-accordion-panel"
      >
        <span>
          This is required text that describes the accordion section in more detail.
        </span>
      </div>
    </details>
    <details
      class="v-accordion"
      name="native-single-select-accordion-group"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 2
      </summary>
      <div
        class="v-accordion-panel"
      >
        <span>
          This is required text that describes the accordion section in more detail.
        </span>
      </div>
    </details>
    <details
      class="v-accordion"
      name="native-single-select-accordion-group"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 3
      </summary>
      <div
        class="v-accordion-panel"
      >
        <span>
          This is required text that describes the accordion section in more detail.
        </span>
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples > Reusable accordion should render correctly 1`] = `
<div>
  <div>
    <div
      class="v-flex v-flex-col v-gap-6"
    >
      <details
        class="v-accordion"
        id="test-id-0"
        name="reusable-accordion-demo"
      >
        <summary
          class="v-button v-button-large v-button-secondary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          <div
            class="v-align-items-center v-flex v-gap-6"
          >
            Success title 1
          </div>
        </summary>
        <div
          class="v-accordion-panel v-px-32"
        >
          <p>
            This is required text that describes the accordion in more detail.
          </p>
        </div>
      </details>
    </div>
    <div
      style="margin-top: 24px;"
    />
    <details
      class="v-accordion"
      id="test-id-1"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading v-gap-2 v-typography-body-2-medium"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        <div
          class="v-align-items-center v-flex v-gap-6"
        >
          Customize demo
        </div>
      </summary>
      <div
        class="v-accordion-panel v-px-32"
      >
        <form>
          <div
            class="v-flex v-flex-col v-gap-16"
            style="margin-bottom: 32px;"
          >
            <div>
              <label
                class="v-label"
                for="accordions"
              >
                Accordions
              </label>
              <div
                class="v-surface v-input-container"
              >
                <input
                  class="v-input"
                  id="accordions"
                  type="number"
                  value="1"
                />
              </div>
            </div>
            <div>
              <label
                class="v-label"
                for="description"
              >
                Description
              </label>
              <div
                class="v-surface v-input-container"
              >
                <input
                  class="v-input"
                  id="description"
                  type="text"
                  value="This is required text that describes the accordion in more detail."
                />
              </div>
            </div>
            <div>
              <label
                class="v-label"
                for="title"
              >
                Title
              </label>
              <div
                class="v-surface v-input-container"
              >
                <input
                  class="v-input"
                  id="title"
                  type="text"
                  value="Success title"
                />
              </div>
            </div>
            <label
              class="v-label"
            >
              <input
                class="v-checkbox"
                type="checkbox"
              />
              Disabled
            </label>
            <label
              class="v-label"
            >
              <input
                class="v-checkbox"
                type="checkbox"
              />
              Multiselect
            </label>
            <label
              class="v-label"
            >
              <input
                checked=""
                class="v-checkbox"
                type="checkbox"
              />
              Padding
            </label>
            <label
              class="v-label"
            >
              <input
                class="v-checkbox"
                type="checkbox"
              />
              Show badge
            </label>
            <label
              class="v-label"
            >
              <input
                class="v-checkbox"
                type="checkbox"
              />
              Show icon
            </label>
            <label
              class="v-label"
            >
              <input
                checked=""
                class="v-checkbox"
                type="checkbox"
              />
              Show toggle icon
            </label>
            <label
              class="v-label"
            >
              <input
                class="v-checkbox"
                type="checkbox"
              />
              Subtle
            </label>
          </div>
          <div
            class="v-flex v-gap-16"
            style="margin-bottom: 16px;"
          >
            <button
              class="v-button"
              type="submit"
            >
              Apply
            </button>
            <button
              class="v-button v-button-secondary"
              type="button"
            >
              Reset
            </button>
          </div>
        </form>
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples > Single-select accordion group with accordion expanded by default should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
  >
    <details
      class="v-accordion"
      open=""
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 1
      </summary>
      <div
        class="v-accordion-panel"
      >
        <span>
          This is required text that describes the accordion section in more detail.
        </span>
      </div>
    </details>
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 2
      </summary>
      <div
        class="v-accordion-panel"
      >
        <span>
          This is required text that describes the accordion section in more detail.
        </span>
      </div>
    </details>
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-large v-button-secondary v-accordion-heading"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 3
      </summary>
      <div
        class="v-accordion-panel"
      >
        <span>
          This is required text that describes the accordion section in more detail.
        </span>
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples > Subtle accordion should render correctly 1`] = `
<div>
  <details
    class="v-accordion"
  >
    <summary
      class="v-button v-button-tertiary v-accordion-heading v-gap-2 v-typography-body-2-medium"
      style="--v-accordion-foreground-initial: var(--palette-default-active); --v-button-default-background: transparent;"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
        />
      </svg>
      Accordion title
    </summary>
    <div
      class="v-accordion-panel v-px-32"
      style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px;"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
  </details>
</div>
`;

exports[`Accordion examples > Subtle accordion with icon should render correctly 1`] = `
<div>
  <details
    class="v-accordion"
  >
    <summary
      class="v-button v-button-tertiary v-accordion-heading v-gap-2 v-typography-body-2-medium"
      style="--v-accordion-foreground-initial: var(--palette-default-active); --v-button-default-background: transparent;"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-low v-icon-cloud"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M14 9.00098C15.65 9.00098 17 10.351 17 12.001H15C15 11.451 14.55 11.001 14 11.001V9.00098Z"
        />
        <path
          class="v-icon-primary"
          d="M14 4.00098C17.66 4.00098 20.6697 6.82137 20.9697 10.4014C22.7897 11.1814 24 12.981 24 15.001C24 17.761 21.76 20.001 19 20.001H5C2.24 20.001 0 17.761 0 15.001C0 12.751 1.49995 10.8212 3.58984 10.2012C3.97984 8.36117 5.58 7.00098 7.5 7.00098C7.73996 7.00098 7.97999 7.02056 8.20996 7.06055C9.50998 5.16071 11.6601 4.00098 14 4.00098ZM14 6.00098C12.13 6.00098 10.4296 7.03117 9.55957 8.70117L9.12988 9.52051L8.28027 9.16113C8.04027 9.05113 7.77 9.00098 7.5 9.00098C6.4 9.00098 5.5 9.90098 5.5 11.001V11.8809L4.62012 12.0205C3.13012 12.2105 2 13.491 2 15.001C2 16.651 3.35 18.001 5 18.001H19C20.65 18.001 22 16.651 22 15.001C22 13.631 21.08 12.4308 19.75 12.0908L18.9805 11.8906L19 11.001C19 8.24098 16.76 6.00098 14 6.00098Z"
        />
      </svg>
      Accordion title
    </summary>
    <div
      class="v-accordion-panel v-px-32"
      style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px;"
    >
      <p>
        This is required text that describes the accordion section in more detail.
      </p>
    </div>
  </details>
</div>
`;

exports[`Accordion examples > Subtle multi-select accordion group should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
  >
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-tertiary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        style="--v-accordion-foreground-initial: var(--palette-default-active); --v-button-default-background: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 1
      </summary>
      <div
        class="v-accordion-panel v-px-32"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px;"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </details>
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-tertiary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        style="--v-accordion-foreground-initial: var(--palette-default-active); --v-button-default-background: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 2
      </summary>
      <div
        class="v-accordion-panel v-px-32"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px;"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </details>
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-tertiary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        style="--v-accordion-foreground-initial: var(--palette-default-active); --v-button-default-background: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 3
      </summary>
      <div
        class="v-accordion-panel v-px-32"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px;"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </details>
  </div>
</div>
`;

exports[`Accordion examples > Subtle single-select accordion group should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-6"
  >
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-tertiary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        style="--v-accordion-foreground-initial: var(--palette-default-active); --v-button-default-background: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 1
      </summary>
      <div
        class="v-accordion-panel v-px-32"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px;"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </details>
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-tertiary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        style="--v-accordion-foreground-initial: var(--palette-default-active); --v-button-default-background: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 2
      </summary>
      <div
        class="v-accordion-panel v-px-32"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px;"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </details>
    <details
      class="v-accordion"
    >
      <summary
        class="v-button v-button-tertiary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        style="--v-accordion-foreground-initial: var(--palette-default-active); --v-button-default-background: transparent;"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        Accordion title 3
      </summary>
      <div
        class="v-accordion-panel v-px-32"
        style="--v-accordion-panel-background-color: transparent; --v-accordion-panel-border-size: 0px;"
      >
        <p>
          This is required text that describes the accordion section in more detail.
        </p>
      </div>
    </details>
  </div>
</div>
`;
